[package]
name = "ss1"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3.7"
futures-util = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
